--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -108,7 +108,7 @@
 
 .dashboard .mid {
   width: 100%;
-  background: #f9f9f9;
+  background: #ffff;
   padding: 2rem 1rem 0 1rem;
   border-radius: 8px;
 }
