--- a/src/styles/DashboardLayout.css
+++ b/src/styles/DashboardLayout.css
@@ -2,13 +2,21 @@
   width: 100%;
   height: 100%;
   display: flex;
-  padding-left: 277px;
+
   transition: all ease-in-out 1s;
+}
+
+.dbOpen {
+  padding-left: 277px;
+}
+
+.dbClose {
+  padding-left: 65px;
 }
 
 .dashboardContainer .leftSide {
   width: 277px;
-  border-right: 2px solid #f1f1f1;
+  /* border-right: 2px solid #f1f1f1; */
   position: fixed;
   top: 0;
   left: 0;
@@ -19,8 +27,16 @@
   padding-top: 101px;
   padding-bottom: 50px;
   transition: all ease-in-out 0.8s;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
+.leftSide.collapsed {
+  width: 65px;
+}
+.leftSide.Uncollapsed {
+  width: 277px;
+}
 .dashboardContainer .leftSide::-webkit-scrollbar {
   display: none;
 }
@@ -62,13 +78,11 @@
 .dashboardContainer .leftSide .navMenu > a.menu {
   width: 100%;
   height: 64px;
-  margin-bottom: 2px;
   text-decoration: none;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   padding: 0 1rem;
-  transition: all ease-in-out 0.9s;
 }
 
 .dashboardContainer .leftSide .navMenu > a.menu:hover {
@@ -148,7 +162,9 @@
   height: auto;
   flex-direction: column;
   width: 100%;
-  transition: all ease-in-out 0.3s;
+  background: #e9e9e98c;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
+    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
 
 .dashboardContainer .leftSide .navMenu .multi-menu img.arrow {
@@ -166,11 +182,16 @@
   width: 100%;
   height: 64px;
   margin-bottom: 2px;
-
+  transition: 600ms ease-in-out;
   text-decoration: none;
   display: flex;
   align-items: center;
   padding-left: 2.5rem;
+}
+
+.dashboardContainer .leftSide.collapsed .navMenu .subMenu a {
+  padding-left: 17px;
+  transition: 600ms ease-in-out;
 }
 
 .dashboardContainer .leftSide .navMenu .subMenu a:hover,
@@ -212,17 +233,21 @@
   padding-bottom: 100px;
 }
 .dashHeader {
-  width: 86%;
+  width: 100%;
+  /* padding-left: 277px; */
   display: flex;
   justify-content: space-between;
   height: 101px;
   align-items: center;
-  border-bottom: 2px solid #f1f1f1;
+  /* border-bottom: 2px solid #f1f1f1; */
   position: fixed;
   top: 0;
   right: 0;
   z-index: 1;
   background: #ffff;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  transition: 200ms ease-in-out;
 }
 
 .dashHeader > .left {
@@ -309,6 +334,7 @@
   padding-top: 150px;
   min-height: 94vh;
   transition: all ease-in-out 0.6s;
+  background: #f5f5f5;
 }
 
 footer {
