--- a/src/styles/DashboardLayout.css
+++ b/src/styles/DashboardLayout.css
@@ -34,9 +34,11 @@
 .leftSide.collapsed {
   width: 65px;
 }
+
 .leftSide.Uncollapsed {
   width: 277px;
 }
+
 .dashboardContainer .leftSide::-webkit-scrollbar {
   display: none;
 }
@@ -79,12 +81,12 @@
 }
 
 .closeSideBarBtn:hover {
-  background: #24903c;
+  background: rgba(0, 0, 0, 1);
   color: white;
   transition: 200ms ease-in-out;
 }
 
-.collapsed > .closeSideBarBtn {
+.collapsed>.closeSideBarBtn {
   display: none !important;
 }
 
@@ -104,7 +106,7 @@
   color: white;
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu {
+.dashboardContainer .leftSide .navMenu>a.menu {
   width: 100%;
   height: 64px;
   text-decoration: none;
@@ -114,11 +116,12 @@
   padding: 0 1rem;
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu:hover {
-  background: linear-gradient(180deg, #5cc148 0%, #389925 100%);
+.dashboardContainer .leftSide .navMenu>a.menu:hover {
+  background: linear-gradient(180deg, var(--primary-color) 0%, var(--primary-color) 100%);
   transition: 200ms ease-in;
 }
-.dashboardContainer .leftSide .navMenu > a.menu:hover span {
+
+.dashboardContainer .leftSide .navMenu>a.menu:hover span {
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
@@ -128,7 +131,7 @@
   color: #ffffff;
 }
 
-.dashboardContainer .leftSide .navMenu > a.menu:hover .menuIcon {
+.dashboardContainer .leftSide .navMenu>a.menu:hover .menuIcon {
   filter: brightness(100);
 }
 
@@ -136,7 +139,8 @@
   width: 25px;
   margin-right: 1.5rem;
 }
-.dashboardContainer .leftSide .navMenu > a.menu > .menuIcon img {
+
+.dashboardContainer .leftSide .navMenu>a.menu>.menuIcon img {
   width: 100%;
 }
 
@@ -144,15 +148,15 @@
   background: #5cc1483b;
 } */
 
-.dashboardContainer .leftSide .navMenu > a.active {
-  background: linear-gradient(180deg, #5cc148 0%, #389925 100%);
+.dashboardContainer .leftSide .navMenu>a.active {
+  background: linear-gradient(180deg, var(--primary-color) 0%, var(--primary-color) 100%);
 }
 
-.dashboardContainer .leftSide .navMenu > a.active img {
+.dashboardContainer .leftSide .navMenu>a.active img {
   filter: brightness(100);
 }
 
-.dashboardContainer .leftSide .navMenu > a.active span {
+.dashboardContainer .leftSide .navMenu>a.active span {
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
@@ -225,7 +229,7 @@
 
 .dashboardContainer .leftSide .navMenu .subMenu a:hover,
 .dashboardContainer .leftSide .navMenu .subMenu a.active {
-  background: #ecf8e9;
+  background: rgba(0, 0, 0, 0.13);
   cursor: pointer;
   transition: 200ms ease-in;
 }
@@ -238,7 +242,7 @@
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.2px;
-  color: #5cc148;
+  color: var(--primary-color);
 }
 
 .dashboardContainer .leftSide .navMenu .subMenu a:hover img,
@@ -261,6 +265,7 @@
   width: 100%;
   padding-bottom: 100px;
 }
+
 .dashHeader {
   width: 100%;
   /* padding-left: 277px; */
@@ -273,13 +278,13 @@
   top: 0;
   right: 0;
   z-index: 1;
-  background: #ffff;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   transition: 200ms ease-in-out;
+  backdrop-filter: blur(8px);
 }
 
-.dashHeader > .left {
+.dashHeader>.left {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -288,13 +293,14 @@
   border-right: 2px solid #f1f1f1;
   padding: 0 20px;
 }
-.dashHeader > .left > .left {
+
+.dashHeader>.left>.left {
   display: flex;
   align-items: center;
   height: 100%;
 }
 
-.dashHeader > .left > .left > span {
+.dashHeader>.left>.left>span {
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
@@ -303,42 +309,43 @@
   color: #000000;
 }
 
-.dashHeader > .left > .left > .icon,
-.dashHeader > .left > .right > .icon {
+.dashHeader>.left>.left>.icon,
+.dashHeader>.left>.right>.icon {
   margin-right: 10px;
   height: 35px;
   width: 35px;
   cursor: pointer;
 }
-.dashHeader > .left > .left > .icon img,
-.dashHeader > .left > .right > .icon img {
+
+.dashHeader>.left>.left>.icon img,
+.dashHeader>.left>.right>.icon img {
   width: 100%;
   height: 100%;
 }
 
-.dashHeader > .left > .right > span {
+.dashHeader>.left>.right>span {
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
-  color: #24903c;
+  color: #252525;
   margin-right: 20px;
 }
 
-.dashHeader > .left > .right {
+.dashHeader>.left>.right {
   display: flex;
   height: 100%;
   align-items: center;
 }
 
 .dashHeader .left .icon.user {
-  border: 2px solid #5cc148;
+  border: 2px solid var(--primary-color);
   border-radius: 50%;
   cursor: pointer;
 }
 
-.dashHeader > .right {
+.dashHeader>.right {
   display: flex;
   width: 15%;
   padding: 0 20px;
@@ -347,13 +354,13 @@
   height: 100%;
 }
 
-.dashHeader > .right .icon {
+.dashHeader>.right .icon {
   width: 40px;
   height: 40px;
   cursor: pointer;
 }
 
-.dashHeader > .right .icon img {
+.dashHeader>.right .icon img {
   width: 100%;
   height: 100%;
 }
@@ -381,7 +388,7 @@ footer p {
 
 footer p a {
   text-decoration: none;
-  color: #24903c !important;
+  color: var(--primary-color) !important;
   font-weight: 600;
   cursor: pointer;
 }
