--- a/src/styles/AddUser.css
+++ b/src/styles/AddUser.css
@@ -10,19 +10,19 @@
   animation: rollout 0.4s;
 }
 
-.addUserPage > .card {
+.addUserPage>.card {
   width: 100%;
   border: 1px solid #cdcfd2;
-  border-radius: 8px 8px 0px 0px;
+  border-radius: 30px;
 }
 
-.addUserPage > .card > .top {
-  height: 48px;
+/* .addUserPage>.card>.top {
+  height: 80px;
   background: linear-gradient(180deg, #59be44 0%, #3a9b26 100%);
-  border-radius: 8px 8px 0px 0px;
-}
+  border-radius: 50px 50px 0px 0px;
+} */
 
-.addUserPage > .card > .bottom > form {
+.addUserPage>.card>.bottom>form {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -31,12 +31,12 @@
   row-gap: 1rem;
 }
 
-.addUserPage > .card > .bottom.monthlySale > form > .inputField {
+.addUserPage>.card>.bottom.monthlySale>form>.inputField {
   width: 30%;
   margin-bottom: 1rem;
 }
 
-.addUserPage > .card > .bottom > h3 {
+.addUserPage>.card>.bottom>h3 {
   margin-top: 2rem;
   margin-left: 3rem;
 
@@ -49,18 +49,18 @@
   color: #000000;
 }
 
-.addUserPage > .card > .bottom > form > .inputField {
+.addUserPage>.card>.bottom>form>.inputField {
   width: 48%;
   display: flex;
   flex-direction: column;
   min-width: 300px;
 }
 
-.addUserPage > .card > .bottom > form > .fullInputField {
+.addUserPage>.card>.bottom>form>.fullInputField {
   width: 100%;
 }
 
-.addUserPage > .card > .bottom > form > .fullInputField > label {
+.addUserPage>.card>.bottom>form>.fullInputField>label {
   margin-bottom: 10px;
   font-family: "Inter";
   font-style: normal;
@@ -71,7 +71,7 @@
   color: #000000;
 }
 
-.addUserPage > .card > .bottom > form > .editorBorder {
+.addUserPage>.card>.bottom>form>.editorBorder {
   border: 1px solid #cdcfd2;
   background: #fafafa;
 }
@@ -93,7 +93,7 @@
   border-color: transparent;
 } */
 
-.addUserPage > .card > .bottom > form > .inputField > label {
+.addUserPage>.card>.bottom>form>.inputField>label {
   margin-bottom: 10px;
   font-family: "Inter";
   font-style: normal;
@@ -104,16 +104,16 @@
   color: #000000;
 }
 
-.addUserPage > .card > .bottom > form > .inputField > label > span,
-.addUserPage > .card > .bottom > form > .fullInputField > label > span {
+.addUserPage>.card>.bottom>form>.inputField>label>span,
+.addUserPage>.card>.bottom>form>.fullInputField>label>span {
   color: #ff0000;
 }
 
-.addUserPage > .card > .bottom > form > .inputField > input,
-.addUserPage > .card > .bottom > form > .fullInputField > input,
-.addUserPage > .card > .bottom > form > .fullInputField > textarea,
-.addUserPage > .card > .bottom > form > .inputField > select,
-.addUserPage > .card > .bottom > form > .inputField > textarea {
+.addUserPage>.card>.bottom>form>.inputField>input,
+.addUserPage>.card>.bottom>form>.fullInputField>input,
+.addUserPage>.card>.bottom>form>.fullInputField>textarea,
+.addUserPage>.card>.bottom>form>.inputField>select,
+.addUserPage>.card>.bottom>form>.inputField>textarea {
   width: 100%;
   padding: 0 10px;
   height: 36px;
@@ -122,35 +122,30 @@
   cursor: pointer;
 }
 
-.addUserPage > .card > .bottom > form > .inputField > textarea {
+.addUserPage>.card>.bottom>form>.inputField>textarea {
   height: auto;
   padding-top: 5px;
 }
 
-.addUserPage > .card > .bottom > form > .inputField > .img {
+.addUserPage>.card>.bottom>form>.inputField>.img {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.addUserPage > .card > .bottom > form > .inputField > .img .imgPreviewRect {
+
+.addUserPage>.card>.bottom>form>.inputField>.img .imgPreviewRect {
   min-height: 200px;
   max-height: 500px;
   max-width: 50%;
   border: none;
 }
 
-.addUserPage
-  > .card
-  > .bottom
-  > form
-  > .inputField
-  > .img
-  .imgPreviewRect
-  > img {
+.addUserPage>.card>.bottom>form>.inputField>.img .imgPreviewRect>img {
   height: 100%;
   width: 100%;
 }
-.addUserPage > .card > .bottom > form > .inputField > .img > .imgPreview {
+
+.addUserPage>.card>.bottom>form>.inputField>.img>.imgPreview {
   height: 122px;
   width: 122px;
   border-radius: 0px;
@@ -158,29 +153,18 @@
   overflow: hidden;
 }
 
-.addUserPage
-  > .card
-  > .bottom
-  > form
-  > .inputField
-  .img
-  input::file-seletor-button {
+.addUserPage>.card>.bottom>form>.inputField .img input::file-seletor-button {
   background: #ebecf0;
   border: 1px solid #dfdfdf;
   border-radius: 10px;
 }
 
-.addUserPage > .card > .bottom > form > .inputField > .img > .imgPreview > img {
+.addUserPage>.card>.bottom>form>.inputField>.img>.imgPreview>img {
   width: 100%;
   height: 100%;
 }
 
-.addUserPage
-  > .card
-  > .bottom
-  > form
-  > .inputField
-  input[type="file"]::file-selector-button {
+.addUserPage>.card>.bottom>form>.inputField input[type="file"]::file-selector-button {
   padding: 0 15px;
   height: 35px;
   width: 130px;
@@ -190,8 +174,8 @@
   cursor: pointer;
 }
 
-.addUserPage > .card > .bottom > form > .inputField > select,
-.addUserPage > .card > .bottom > form > .inputField option option {
+.addUserPage>.card>.bottom>form>.inputField>select,
+.addUserPage>.card>.bottom>form>.inputField option option {
   /* background: linear-gradient(180deg, #58bd43 0%, #3fa12a 100%); */
   background: #58bd43;
   font-family: "Inter";
@@ -204,13 +188,13 @@
   border-right: 8px solid transparent;
 }
 
-.addUserPage > .card > .bottom > form > .inputField > input:hover,
-.addUserPage > .card > .bottom > form > .inputField > select:hover {
+.addUserPage>.card>.bottom>form>.inputField>input:hover,
+.addUserPage>.card>.bottom>form>.inputField>select:hover {
   outline: 1.3px solid #399b2670;
   /* transition: 200ms ease-in-out; */
 }
 
-.addUserPage > .card .bottom > form .btns {
+.addUserPage>.card .bottom>form .btns {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -218,17 +202,17 @@
   margin: 1.5rem 0;
 }
 
-.addUserPage > .card > .bottom > form > .btns button {
+.addUserPage>.card>.bottom>form>.btns button {
   padding: 10px 20px;
   border: none;
   background: transparent;
 }
 
-.addUserPage > .card > .bottom > form > .btns a {
+.addUserPage>.card>.bottom>form>.btns a {
   text-decoration: none;
 }
 
-.addUserPage > .card > .bottom > form > .btns > button.submit {
+.addUserPage>.card>.bottom>form>.btns>button.submit {
   display: flex;
   align-items: center;
   padding: 10px 30px;
@@ -246,11 +230,11 @@
   color: #ffffff;
 }
 
-.addUserPage > .card > .bottom > form > .btns button.submit:hover {
+.addUserPage>.card>.bottom>form>.btns button.submit:hover {
   background: linear-gradient(180deg, #e67a00 0%, #ff8800ad 100%);
 }
 
-.addUserPage > .card > .bottom > form > .btns button.back {
+.addUserPage>.card>.bottom>form>.btns button.back {
   display: flex;
   align-items: center;
   height: 39px;
@@ -267,6 +251,6 @@
   color: #5c5c5c;
 }
 
-.addUserPage > .card > .bottom > form > .btns > button.back:hover {
+.addUserPage>.card>.bottom>form>.btns>button.back:hover {
   background: linear-gradient(180deg, #ffffff 0%, #dfdfdf 100%);
 }
