--- a/src/styles/DashboardLayout.css
+++ b/src/styles/DashboardLayout.css
@@ -18,17 +18,19 @@
   width: 277px;
   /* border-right: 2px solid #f1f1f1; */
   position: fixed;
+  margin-top: 3px;
   top: 0;
   left: 0;
   z-index: 2;
-  background: #ffff;
-  height: 100vh;
+  background: #111;
+  height: 99vh;
   overflow: auto;
   padding-top: 101px;
   padding-bottom: 50px;
   transition: all ease-in-out 0.8s;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
 }
 
 .leftSide.collapsed {
@@ -37,6 +39,8 @@
 
 .leftSide.Uncollapsed {
   width: 277px;
+  border-bottom-right-radius: 40px;
+  border-top-right-radius: 40px;
 }
 
 .dashboardContainer .leftSide::-webkit-scrollbar {
@@ -52,21 +56,21 @@
   top: 0;
   left: 0;
   z-index: 3;
-  background: #fff;
   width: 277px;
+  border-top-right-radius: 20px;
 }
 
 .dashboardContainer .leftSide .logo img {
-  width: 183.58px;
-  height: 63.24px;
+  width: 130px;
+  height: 50px;
+  filter: brightness(0%) invert(100%);
 }
 
 .closeSideBarBtn {
   position: fixed;
-  left: 235px;
+  left: 231px;
   z-index: 10;
-  top: 7px;
-
+  top: 13px;
   border: none;
   height: 30px;
   height: 30px;
@@ -114,11 +118,13 @@
   align-items: center;
   justify-content: flex-start;
   padding: 0 1rem;
+  margin-top: 1px;
 }
 
 .dashboardContainer .leftSide .navMenu>a.menu:hover {
-  background: linear-gradient(180deg, var(--primary-color) 0%, var(--primary-color) 100%);
+  background: whitesmoke;
   transition: 200ms ease-in;
+  border-radius: 0 50px 50px 0;
 }
 
 .dashboardContainer .leftSide .navMenu>a.menu:hover span {
@@ -128,11 +134,11 @@
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.2px;
-  color: #ffffff;
+  color: #1c1c1c;
 }
 
 .dashboardContainer .leftSide .navMenu>a.menu:hover .menuIcon {
-  filter: brightness(100);
+  filter: brightness(0);
 }
 
 .dashboardContainer .leftSide .navMenu a.menu .menuIcon {
@@ -149,12 +155,12 @@
 } */
 
 .dashboardContainer .leftSide .navMenu>a.active {
-  background: linear-gradient(180deg, var(--primary-color) 0%, var(--primary-color) 100%);
+  background: whitesmoke;
+  border-radius: 0 50px 50px 0;
+  color: #101010;
 }
 
-.dashboardContainer .leftSide .navMenu>a.active img {
-  filter: brightness(100);
-}
+
 
 .dashboardContainer .leftSide .navMenu>a.active span {
   font-family: "Inter";
@@ -163,7 +169,7 @@
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.2px;
-  color: #ffffff;
+  color: #1c1c1c;
 }
 
 .dashboardContainer .leftSide .navMenu a .menuIcon {
@@ -187,7 +193,7 @@
 }
 
 .dashboardContainer .leftSide .navMenu a svg {
-  fill: white;
+  fill: rgb(0, 0, 0);
 }
 
 .dashboardContainer .leftSide .navMenu .subMenu {
@@ -195,9 +201,9 @@
   height: auto;
   flex-direction: column;
   width: 100%;
-  background: #e9e9e98c;
-  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
-    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  background: #5858588c;
+  box-shadow: rgb(11, 11, 11) 3px 3px 6px 0px inset,
+    rgba(53, 53, 53, 0.5) -3px -3px 6px 1px inset;
 }
 
 .dashboardContainer .leftSide .navMenu .multi-menu img.arrow {
@@ -206,7 +212,7 @@
 
 .dashboardContainer .leftSide .navMenu .active.multi-menu img.arrow,
 .dashboardContainer .leftSide .navMenu .multi-menu:hover img.arrow {
-  filter: none;
+  filter: brightness(0%) invert(100%);
 }
 
 .dashboardContainer .leftSide .navMenu .subMenu a {
@@ -229,7 +235,7 @@
 
 .dashboardContainer .leftSide .navMenu .subMenu a:hover,
 .dashboardContainer .leftSide .navMenu .subMenu a.active {
-  background: rgba(0, 0, 0, 0.13);
+  background: rgb(81 81 81);
   cursor: pointer;
   transition: 200ms ease-in;
 }
@@ -242,7 +248,7 @@
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.2px;
-  color: var(--primary-color);
+  color: #a1a1a1;
 }
 
 .dashboardContainer .leftSide .navMenu .subMenu a:hover img,
@@ -278,8 +284,8 @@
   top: 0;
   right: 0;
   z-index: 1;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; */
   transition: 200ms ease-in-out;
   backdrop-filter: blur(8px);
 }
