--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,14 @@ body {
   width: 100%;
   height: 100vh;
   font-family: "Inter", sans-serif;
+
 }
 
 #primary {
-  --primary-color: rgb(21, 21, 21);
+  --primary-color: #202124;
   --secondary-color: black;
+  /* background: #202124; */
+  --shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 #root {
