--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   height: 3.5rem;
 }
 
+.card {
+  box-shadow: var(--shadow);
+  border-radius: 50px;
+  border: none;
+}
+
+
+
 .black {
   filter: invert(100%) brightness(0%);
 }
@@ -34,6 +42,12 @@
 
 .table>table th {
   border: none !important;
+}
+
+.table>table input {
+  height: 25px;
+  border-radius: 20px;
+  width: 25px;
 }
 
 @keyframes rollout {
