--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -64,7 +64,7 @@
 }
 
 .authContainer .box h4 {
-  font-family: "Inter";
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -75,7 +75,7 @@
 }
 
 .authContainer .box span.heading-desc {
-  font-family: "Inter";
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   display: inline-block;
   font-weight: 400;
@@ -88,7 +88,7 @@
 }
 
 .authContainer .box .inputField label {
-  font-family: "Inter";
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -106,7 +106,7 @@
   padding-right: 3rem;
 
   /* Font Style */
-  font-family: "Inter";
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -121,7 +121,7 @@
   height: 56px;
   cursor: pointer;
   /* font style  */
-  font-family: "Inter";
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -137,7 +137,7 @@
 }
 
 .authContainer .box .forgotPasswordLink {
-  font-family: "Inter";
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -148,7 +148,7 @@
 }
 
 .authContainer .box .forgotPasswordLink a {
-  font-family: "Inter";
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
