--- a/src/styles/AddUser.css
+++ b/src/styles/AddUser.css
@@ -10,7 +10,7 @@
   animation: rollout 0.4s;
 }
 
-.addUserPage>.card {
+.addUserPage > .card {
   width: 100%;
   border: 1px solid #cdcfd2;
   border-radius: 30px;
@@ -22,7 +22,7 @@
   border-radius: 50px 50px 0px 0px;
 } */
 
-.addUserPage>.card>.bottom>form {
+.addUserPage > .card > .bottom > form {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -31,16 +31,16 @@
   row-gap: 1rem;
 }
 
-.addUserPage>.card>.bottom.monthlySale>form>.inputField {
+.addUserPage > .card > .bottom.monthlySale > form > .inputField {
   width: 30%;
   margin-bottom: 1rem;
 }
 
-.addUserPage>.card>.bottom>h3 {
+.addUserPage > .card > .bottom > h3 {
   margin-top: 2rem;
   margin-left: 3rem;
 
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 23.8926px;
@@ -49,20 +49,21 @@
   color: #000000;
 }
 
-.addUserPage>.card>.bottom>form>.inputField {
+.addUserPage > .card > .bottom > form > .inputField {
   width: 48%;
   display: flex;
   flex-direction: column;
   min-width: 300px;
 }
 
-.addUserPage>.card>.bottom>form>.fullInputField {
+.addUserPage > .card > .bottom > form > .fullInputField {
   width: 100%;
+  border-radius: 20px;
 }
 
-.addUserPage>.card>.bottom>form>.fullInputField>label {
+.addUserPage > .card > .bottom > form > .fullInputField > label {
   margin-bottom: 10px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15.7222px;
@@ -71,7 +72,7 @@
   color: #000000;
 }
 
-.addUserPage>.card>.bottom>form>.editorBorder {
+.addUserPage > .card > .bottom > form > .editorBorder {
   border: 1px solid #cdcfd2;
   background: #fafafa;
 }
@@ -93,9 +94,9 @@
   border-color: transparent;
 } */
 
-.addUserPage>.card>.bottom>form>.inputField>label {
+.addUserPage > .card > .bottom > form > .inputField > label {
   margin-bottom: 10px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15.7222px;
@@ -104,16 +105,16 @@
   color: #000000;
 }
 
-.addUserPage>.card>.bottom>form>.inputField>label>span,
-.addUserPage>.card>.bottom>form>.fullInputField>label>span {
+.addUserPage > .card > .bottom > form > .inputField > label > span,
+.addUserPage > .card > .bottom > form > .fullInputField > label > span {
   color: #ff0000;
 }
 
-.addUserPage>.card>.bottom>form>.inputField>input,
-.addUserPage>.card>.bottom>form>.fullInputField>input,
-.addUserPage>.card>.bottom>form>.fullInputField>textarea,
-.addUserPage>.card>.bottom>form>.inputField>select,
-.addUserPage>.card>.bottom>form>.inputField>textarea {
+.addUserPage > .card > .bottom > form > .inputField > input,
+.addUserPage > .card > .bottom > form > .fullInputField > input,
+.addUserPage > .card > .bottom > form > .fullInputField > textarea,
+.addUserPage > .card > .bottom > form > .inputField > select,
+.addUserPage > .card > .bottom > form > .inputField > textarea {
   width: 100%;
   padding: 0 10px;
   height: 45px;
@@ -125,30 +126,37 @@
   background: rgb(244, 244, 244);
 }
 
-.addUserPage>.card>.bottom>form>.inputField>textarea {
+.addUserPage > .card > .bottom > form > .inputField > textarea {
   height: auto;
   padding-top: 5px;
 }
 
-.addUserPage>.card>.bottom>form>.inputField>.img {
+.addUserPage > .card > .bottom > form > .inputField > .img {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.addUserPage>.card>.bottom>form>.inputField>.img .imgPreviewRect {
+.addUserPage > .card > .bottom > form > .inputField > .img .imgPreviewRect {
   min-height: 200px;
   max-height: 500px;
   max-width: 50%;
   border: none;
 }
 
-.addUserPage>.card>.bottom>form>.inputField>.img .imgPreviewRect>img {
+.addUserPage
+  > .card
+  > .bottom
+  > form
+  > .inputField
+  > .img
+  .imgPreviewRect
+  > img {
   height: 100%;
   width: 100%;
 }
 
-.addUserPage>.card>.bottom>form>.inputField>.img>.imgPreview {
+.addUserPage > .card > .bottom > form > .inputField > .img > .imgPreview {
   height: 122px;
   width: 122px;
   border-radius: 0px;
@@ -156,18 +164,29 @@
   overflow: hidden;
 }
 
-.addUserPage>.card>.bottom>form>.inputField .img input::file-seletor-button {
+.addUserPage
+  > .card
+  > .bottom
+  > form
+  > .inputField
+  .img
+  input::file-seletor-button {
   background: #ebecf0;
   border: 1px solid #dfdfdf;
   border-radius: 10px;
 }
 
-.addUserPage>.card>.bottom>form>.inputField>.img>.imgPreview>img {
+.addUserPage > .card > .bottom > form > .inputField > .img > .imgPreview > img {
   width: 100%;
   height: 100%;
 }
 
-.addUserPage>.card>.bottom>form>.inputField input[type="file"]::file-selector-button {
+.addUserPage
+  > .card
+  > .bottom
+  > form
+  > .inputField
+  input[type="file"]::file-selector-button {
   padding: 0 15px;
   height: 35px;
   width: 130px;
@@ -177,11 +196,11 @@
   cursor: pointer;
 }
 
-.addUserPage>.card>.bottom>form>.inputField>select,
-.addUserPage>.card>.bottom>form>.inputField option option {
+.addUserPage > .card > .bottom > form > .inputField > select,
+.addUserPage > .card > .bottom > form > .inputField option option {
   /* background: linear-gradient(180deg, #58bd43 0%, #3fa12a 100%); */
   background: #58bd43;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -191,13 +210,13 @@
   border-right: 8px solid transparent;
 }
 
-.addUserPage>.card>.bottom>form>.inputField>input:hover,
-.addUserPage>.card>.bottom>form>.inputField>select:hover {
+.addUserPage > .card > .bottom > form > .inputField > input:hover,
+.addUserPage > .card > .bottom > form > .inputField > select:hover {
   outline: 1.3px solid #399b2670;
   /* transition: 200ms ease-in-out; */
 }
 
-.addUserPage>.card .bottom>form .btns {
+.addUserPage > .card .bottom > form .btns {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -205,17 +224,17 @@
   margin: 1.5rem 0;
 }
 
-.addUserPage>.card>.bottom>form>.btns button {
+.addUserPage > .card > .bottom > form > .btns button {
   padding: 10px 20px;
   border: none;
   background: transparent;
 }
 
-.addUserPage>.card>.bottom>form>.btns a {
+.addUserPage > .card > .bottom > form > .btns a {
   text-decoration: none;
 }
 
-.addUserPage>.card>.bottom>form>.btns>button.submit {
+.addUserPage > .card > .bottom > form > .btns > button.submit {
   display: flex;
   align-items: center;
   padding: 10px 30px;
@@ -224,7 +243,7 @@
   border: 1px solid #dfdfdf;
   border-radius: 20px;
 
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15.7222px;
@@ -233,11 +252,11 @@
   color: #ffffff;
 }
 
-.addUserPage>.card>.bottom>form>.btns button.submit:hover {
+.addUserPage > .card > .bottom > form > .btns button.submit:hover {
   background: linear-gradient(180deg, #e67a00 0%, #ff8800ad 100%);
 }
 
-.addUserPage>.card>.bottom>form>.btns button.back {
+.addUserPage > .card > .bottom > form > .btns button.back {
   display: flex;
   align-items: center;
   height: 45px;
@@ -246,7 +265,7 @@
   border-radius: 25px;
   min-width: 150px;
   text-align: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15.7222px;
@@ -255,6 +274,6 @@
   color: #5c5c5c;
 }
 
-.addUserPage>.card>.bottom>form>.btns>button.back:hover {
+.addUserPage > .card > .bottom > form > .btns > button.back:hover {
   background: linear-gradient(180deg, #ffffff 0%, #dfdfdf 100%);
 }
